# hashicorp-rust-plugin

./: Cargo.toml  build.rs
go/: go.mod  go.sum  main.go
proto/: kv.proto
src/: kv.rs  lib.rs  main.rs
